java-plugin/src/test/cases/error/UseBe6n-13-47.java
import io.github.miracelwhipp.constness.test.Bean;

class UseBean {

    static {

        Bean bean = new Bean();

        bean.doSomething();

        bean.constBean.doConst();

        bean.mutableBean.constBean.doSomething();
    }

}